# suturo_resources

./: .gitignore  .gitmodules  README.md  rosinstall.rosinstall
manipulation_action_msgs/: package.xml
manipulation_action_msgs/action/: Grasp.action  Perceive.action  Place.action
maps/: CMakeLists.txt  hsr_lab_new.yaml  map.yaml  package.xml
maps/hsr_lab/: map.pgm
maps/robocup_sim/: map.pgm  robocup_sim_map-1.pgm  robocup_sim_map-1.yaml  robocup_sim_map-2.yaml
messages/manipulation_action_msgs/: CMakeLists.txt
messages/manipulation_action_msgs/action/: Grasp.action  MoveGripper.action  Open.action  Perceive.action  Place.action  TakePose.action
messages/manipulation_action_msgs/srv/: CanGrasp.srv
messages/manipulation_msgs/: CMakeLists.txt  package.xml
messages/manipulation_msgs/action/: Grasp.action  MakePlan.action  Open.action  Place.action  TakePose.action
messages/manipulation_msgs/msg/: ContextFromAbove.msg  ObjectInGripper.msg
messages/navigation_msgs/: CMakeLists.txt  package.xml
messages/navigation_msgs/msg/: Area.msg
messages/nlg_msgs/: CMakeLists.txt  package.xml
messages/nlg_msgs/action/: LanguageGeneration.action
messages/nlg_msgs/msg/: KeyValuePair.msg  MeaningRepresentation.msg
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: RSObject.msg
suturo_bringup/: CMakeLists.txt  germanOpen.rviz  package.xml
suturo_bringup/launch/: #robocup_practice_easy.launch#  GermanOpen_bringup.launch  cleanup_bringup.launch  cleanup_movable_doors.launch  doors_test.launch  doors_test_in_rooms.launch  envi_2_bringup.launch  envi_bringup.launch  envi_master_ms0_bringup.launch  gpsr.launch  grocery_bringup.launch  hsrb_recoding.launch  mapping.launch  publish_appartment_lab.launch  restaurant_mapping.launch  robocup_bringup.launch  robocup_demo.launch  robocup_demo_2.launch  robocup_demo_2_objects.launch  robocup_demo_objects.launch  robocup_jule.launch  robocup_practice_easy.launch  robocup_vanesa.launch  robocup_vanesa_local.launch  rooms_test.launch  rviz.launch  suturo_bringup.launch  suturo_master_ms2_v1.launch  suturo_simulation_bringup.launch  suturo_tab.launch  test.launch  test.launch~  test_knowledge.launch  test_knowledge_semantic_map.launch  test_next_object.launch  vanessa_launch.launch
suturo_gz_text_renderer/: CMakeLists.txt  package.xml
suturo_gz_text_renderer/src/: SRW.cc  SRW.hh
suturo_resources/: CMakeLists.txt  README.md  package.xml
suturo_resources/gazebo_models/multiple_rooms_walls/: model.config  model.sdf
suturo_resources/gazebo_models/robocup_example_walls/: model.config  model.sdf
suturo_resources/gazebo_models/test_next_object_walls/: model.config  model.sdf
suturo_resources/gazebo_worlds/: empty.world  recording_world.world  robocup_demo.world  robocup_demo_2.world  robocup_demo_2_objects.world  robocup_demo_objects.world  robocup_official_practice_0_easy.world  suturo_door_rooms.world  suturo_doors_test.world  suturo_doors_test_in.world  suturo_multiple_rooms.world  suturo_sim_clean_up_movable_door.world  suturo_sim_clean_up_shelf.world  suturo_sim_clean_up_v1.world  suturo_sim_clean_up_v2.world  suturo_sim_v2.world  suturo_sim_world.world  suturo_sim_world_v2.world  suturo_test_next_object.world
suturo_resources/maps/corona_sim/: sim_v1.yaml  sim_v1_opened.yaml
suturo_resources/maps/hsr_lab/: map.yaml  new_map.pgm  new_map.yaml
suturo_resources/maps/hsr_lab_master_2022/: map.yaml  map3-door-open-cleaned.xcf  map3-door-open-cleaned.yaml
suturo_resources/maps/hsr_lab_master_2023/: hsr_lab_master_2023.yaml
suturo_resources/maps/hsr_lab_master_2023_post_robocup/: hsr_lab_master_2023_post_robocup.yaml
suturo_resources/maps/projectroom_beta/: final_projectroom_map.yaml  germanOpen_v1.yaml  ms3_room.yaml  ms3_room_02.yaml  new_suturo_lab.yaml  projectroom1.yaml  projectroom_couch.yaml  projectroom_new.yaml  robocup_v1.yaml  robocup_v3.yaml  suturo_master_04_2025_v1_retouched.yaml  suturo_master_ms2_v1.yaml
suturo_resources/maps/robocup_2023/: robocup.yaml
suturo_resources/maps/robocup_2023_test/: testmap1.yaml
suturo_resources/maps/robocup_2023_test_breakfast/: robocup_2023_test_breakfast.yaml
suturo_resources/maps/robocup_2023_v1/: robocup.yaml
suturo_resources/maps/robocup_sim/: map.yaml  robocup_sim_map-2.pgm
suturo_resources/maps/robocup_sim_master/: robocup_demo.pgm  robocup_demo.yaml  robocup_demo_2.pgm  robocup_demo_2.yaml
suturo_resources/maps/sorin_apartment/: sorinsapartment.yaml
suturo_resources/maps/suturobocup-2023/: SuturoApartLab-cleaned.yaml  SuturoApartLab.yaml
suturo_resources/maps/wrs2020/: Readme.md
suturo_resources/rviz_configs/: config_videos.rviz  objet_finder_comparisson.rviz  suturo.rviz
suturo_resources/src/: base_scan_opening_limiter.py
suturo_resources/urdf/: README.md  apartment-small.urdf  apartment.urdf  gz_test_door.urdf.xacro  gz_test_doors.urdf.xacro  hsr_movable_door.urdf.xacro  hsr_small_shelf.urdf.xacro  hsr_table.urdf.xacro  hsrb_lab_shelf.urdf.xacro  hsrb_sim_v1.urdf.xacro  hsrb_sim_v1_openable_door.urdf.xacro  ms3_room_04.urdf.xacro  robocup_sim_walls.urdf.xacro  rw_lab_1.urdf.xacro  sim_door_rooms.urdf.xacro  sim_doors_test.urdf.xacro  suturo_enviorment.urdf.xacro  suturo_environment.urdf.xacro  suturo_environment_vanessa.urdf.xacro  suturo_rooms.urdf.xacro  suturo_shelf.urdf.xacro  suturo_shelf_openable.urdf.xacro  suturo_table.urdf.xacro  suturo_wall.urdf.xacro
suturo_resources/urdf/launch/: load_urdf_and_gazebo.launch  upload_door_obj.launch  urdf.launch
suturo_resources/urdf/pure_urdf/: ms3_room_04-cda670be35a79a941da6d52f876ce69702aa31fc.urdf  ms3_room_04.urdf  shelf_hohc.urdf  suturo_environment.urdf
suturo_resources/urdf/urdf_components/: IAI_dish_washer.urdf.xacro  README.md  suturo_bed.urdf.xacro  suturo_bucket.urdf.xacro  suturo_chair.urdf.xacro  suturo_coathanger.urdf.xacro  (+26 more)
suturo_room_viz/: CMakeLists.txt  package.xml
suturo_room_viz/launch/: suturo_room_viz.launch
suturo_room_viz/scripts/: suturo_room_viz.py
suturo_utils/global_pose_updater/: CMakeLists.txt  README.md  package.xml
(+245 files in other folders)
