<package format="2">
  <name>manipulation_action_msgs</name>
  <version>0.1.0</version>

  <description>
    Messages for the suturo manipulation action server
  </description>


  <author email="jan_neu@uni-bremen.de">Jan Neumann</author>
  <author email="stelter2@uni-bremen.de">Marc Stelter</author>


  <maintainer email="stelter2@uni-bremen.de">Marc Stelter</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
