<package format="2">
  <name>perception_msgs</name>
  <version>0.1.0</version>

  <description>
    Messages for the suturo perception action server
  </description>


  <author email="phklein@uni-bremen.de">Philipp Klein</author>



  <maintainer email="phklein@uni-bremen.de">Philipp Klein</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>
