<?xml version="1.0"?>
<package format="2">
  <name>suturo_gz_text_renderer</name>
  <version>0.0.1</version>
  <description>The suturo_gazebo_textrenderer package</description>

  <maintainer email="schnippa@uni-bremen.de">Paul Schnipper</maintainer>

  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
     <gazebo_ros plugin_path="${prefix}/../../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
