<package format="2">
  <name>suturo_resources</name>
  <version>0.1.0</version>

  <description>
    Resources for the Sututro project
  </description>

  <author email="stelter2@uni-bremen.de">Marc Stelter</author>


  <maintainer email="stelter2@uni-bremen.de">Marc Stelter</maintainer>
  <license>ToDo</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
