<package format="2">
  <name>suturo_resources</name>
  <version>0.1.0</version>

  <description>
    Resources for the Sututro project
  </description>

  <author email="stelter2@uni-bremen.de">Marc Stelter</author>


  <maintainer email="stelter2@uni-bremen.de">Marc Stelter</maintainer>
  <license>ToDo</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_models"/>
  </export>

</package>
