<package format="2">
  <name>navigation_msgs</name>
  <version>0.1.0</version>

  <description>
    Messages for suturo navigation
  </description>

  <author email="stelter2@uni-bremen.de">Marc Stelter</author>

  <maintainer email="stelter2@uni-bremen.de">Marc Stelter</maintainer>
  <license>g</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
