<package format="2">
  <name>global_pose_updater</name>
  <version>0.1.0</version>

  <description>
    Global Pose updater
  </description>

  <author email="hawkin@uni-bremen.de">Alina Hawkin</author>


  <maintainer email="hawkin@uni-bremen.de">Alina Hawkin</maintainer>
  <license>ToDo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



</package>
